refactor(BDM): split unit/integration tests and remove JUnitQuickcheck (#3789)
## Summary
- **Split unit and integration tests** in `bonita-business-data-impl`:
renamed integration test classes (`ConcurrencyTest` → `ConcurrencyIT`,
`JPABusinessDataRepositoryImplITest` →
`JPABusinessDataRepositoryImplIT`, `SchemaManagerUpdateTest` →
`SchemaManagerUpdateIT`) so they follow the `*IT` convention and are
picked up by `integrationTest` task instead of `test`
- **Removed JUnitQuickcheck** dependency: replaced the `@Property`-based
test with a simple loop over representative values, switched
`BusinessDataModelRepositoryImplTest` from `JUnitQuickcheck` runner to
`MockitoJUnitRunner.Silent`
- **Fixed classloader pollution**: added a stub for
`classLoaderService.getClassLoader()` in
`BusinessDataModelRepositoryImplTest` to prevent
`uninstall()`/`install()` from nullifying the thread context
classloader, and removed the defensive workaround that was in
`BusinessDataServiceImplTest`
- Applied `bonita-tests` plugin to properly separate test and
integrationTest source sets
- Updated `databaseIntegrationTest` filter from `**/*Test.class` to
`**/*IT.class`

---------

Co-authored-by: Claude Opus 4.6 (1M context) <noreply@anthropic.com>